--- a/osgi-dependencies/pom.xml
+++ b/osgi-dependencies/pom.xml
@@ -29,6 +29,7 @@
 	<properties>
 		<org.scala-lang.scala.version>2.8.1</org.scala-lang.scala.version>
 		<javax.transaction.jta.version>1.1</javax.transaction.jta.version>
+		<javax.servlet.servlet-api.version>2.5</javax.servlet.servlet-api.version>
 		<com.eaio.uuid.version>3.2</com.eaio.uuid.version>
 		<jsr166x.jsr166x.version>1.0</jsr166x.jsr166x.version>
 		<org.fusesource.hawtdispatch.version>1.0</org.fusesource.hawtdispatch.version>
@@ -72,6 +73,11 @@
 			<artifactId>jta</artifactId>
 			<version>${javax.transaction.jta.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>${javax.servlet.servlet-api.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>com.eaio</groupId>
 			<artifactId>uuid</artifactId>
