--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<scala.version>2.8.1</scala.version>
+		<neo4j.version>1.3-SNAPSHOT</neo4j.version>
 	</properties>
 
 	<repositories>
@@ -140,6 +141,7 @@
 		<module>services-common</module>
 		<module>services-sample</module>
 		<module>osgi-dependencies</module>
+		<module>features</module>
 	</modules>
 
 </project>
