--- a/configuration-datasource-neo4j/pom.xml
+++ b/configuration-datasource-neo4j/pom.xml
@@ -9,14 +9,16 @@
 	<groupId>org.escapek.ekcmdb</groupId>
 	<artifactId>configuration-datasource-neo4j</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>bundle</packaging>
 	<name>EKcmdb - Neo4J datasource configuration</name>
 
 	<properties>
 		<neo4j.version>1.3-SNAPSHOT</neo4j.version>
-		<bundle.namespace>org.escapek.ekcmdb.configuration-datasource-neo4j</bundle.namespace>
+		<bundle.namespace>org.escapek.ekcmdb.configuration.datasource.neo4j</bundle.namespace>
 	</properties>
 
 	<build>
+		<finalName>${project.groupId}.${project.artifactId}_${project.version}</finalName>
 		<sourceDirectory>src/main/scala</sourceDirectory>
 		<testSourceDirectory>src/test/scala</testSourceDirectory>
 		<plugins>
@@ -35,12 +37,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<includes>
-						<include>**/*Test.class</include>
-						<include>**/*Spec.class</include>
-					</includes>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
@@ -51,8 +47,8 @@
 					<instructions>
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Version>${project.version}</Bundle-Version>
-						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
-						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
+						<Export-Package>${bundle.namespace}.*;version="${project.version}"</Export-Package>
+						<Private-Package>org.escapek.ekcmdb.configuration.datasource.internal.*</Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
