--- a/core/pom.xml
+++ b/core/pom.xml
@@ -12,11 +12,8 @@
 	<name>EKcmdb - Abstract model</name>
 	<packaging>bundle</packaging>
 
-	<properties>
-		<bundle.namespace>org.escapek.ekcmdb.core</bundle.namespace>
-	</properties>
-
 	<build>
+		<finalName>${project.groupId}.${project.artifactId}_${project.version}</finalName>
 		<sourceDirectory>src/main/scala</sourceDirectory>
 		<testSourceDirectory>src/test/scala</testSourceDirectory>
 		<plugins>
@@ -41,8 +38,7 @@
 					<instructions>
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Version>${project.version}</Bundle-Version>
-						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
-						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
+						<Export-Package>org.escapek.ekcmdb.core.*;version="${project.version}"</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
