--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 					<artifactId>maven-pax-plugin</artifactId>
 					<version>1.4</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.8</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
