--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 	</pluginRepositories>
 
 	<build>
+		<finalName>${project.groupId}.${project.artifactId}_${project.version}</finalName>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -67,6 +68,17 @@
 					<groupId>org.apache.felix</groupId>
 					<artifactId>maven-bundle-plugin</artifactId>
 					<version>2.3.4</version>
+					<extensions>true</extensions>
+					<configuration>
+						<manifestLocation>META-INF</manifestLocation>
+						<instructions>
+							<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+							<Bundle-Version>${project.version}</Bundle-Version>
+							<Export-Package>${bundle.namespace}.*;version="${project.version}"</Export-Package>
+							<Private-Package>${bundle.namespace}.internal.*</Private-Package>
+							<_include>-osgi.bnd</_include>
+						</instructions>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.ops4j</groupId>
@@ -141,13 +153,11 @@
 		<module>core</module>
 		<module>model-neo4j</module>
 		<module>tools-neo4j</module>
-		<module>dao-neo4j</module>
 		<module>services</module>
 		<module>services-common</module>
 		<module>services-sample</module>
 		<module>osgi-dependencies</module>
 		<module>features</module>
-		<module>configuration-datasource-neo4j</module>
 	</modules>
 
 </project>
