--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,21 @@
 					<groupId>org.scala-tools</groupId>
 					<artifactId>maven-scala-plugin</artifactId>
 					<version>2.15.2</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>compile</goal>
+								<goal>testCompile</goal>
+							</goals>
+							<configuration>
+								<args>
+									<arg>-make:transitive</arg>
+									<arg>-dependencyfile</arg>
+									<arg>${project.build.directory}/.scala_dependencies</arg>
+								</args>
+							</configuration>
+						</execution>
+					</executions>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.felix</groupId>
@@ -151,6 +166,7 @@
 
 	<modules>
 		<module>core</module>
+		<module>cmdb</module>
 		<module>core-neo4j</module>
 		<module>services</module>
 		<module>services-common</module>
