--- a/cmdb/pom.xml
+++ b/cmdb/pom.xml
@@ -10,11 +10,16 @@
   <artifactId>cmdb</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>${project.artifactId}</name>
+  <packaging>bundle</packaging>
 
   <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+      </plugin>
       <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
@@ -58,5 +63,11 @@
   		<artifactId>core</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j</artifactId>
+      <version>${neo4j.version}</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
